--- a/consejos.html
+++ b/consejos.html
@@ -34,6 +34,7 @@
     </nav>
 </header>
 <br>
+<!-- aca creamos un apartado de consejos sobre fotografía que rellenamos con lorem para dar una idea a lo que sera en un futuro -->
 <div class="consejos">
     <h2>Lorem, ipsum.</h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolorum error aperiam sunt quod repudiandae iusto ratione ipsum animi, deserunt consectetur magni facilis delectus debitis voluptates culpa rerum eaque qui doloremque!
