--- a/contacto.html
+++ b/contacto.html
@@ -34,6 +34,7 @@
     </nav>
 </header>
 <br>
+<!-- Aca dividimos la pantalla en una info de contacto y en un formulario para poder tener una base de datos de las consultas de los usuarios -->
 <div class="contacto">
     <div class="info">
         <h3>Contáctanos</h3>
@@ -43,6 +44,7 @@
         <p>germanggiorgis@gmail.com</p>
         <p>Mendoza, Argentina</p>
     </div>
+<!-- No logramos modificar los tamaños de los input para que queden cada uno con su tamaño -->
     <div class="formulario">
         <form action="#" autocomplete="off">
             <input type="text" name="" id="" placeholder="Ingresa tu nombre" class="inpt">
@@ -52,4 +54,30 @@
         </form>
     </div>
 </div>
+<footer>
+    <div class="logo-footer">
+        <p>© 2023, IMB</p>
+        <br>
+        <p></p>
+    </div>
+    <div class="listaFooter">
+        <th>
+            <li>
+                <a href="" class="link-footer">Acerca de</a>
+            </li>
+            <li>
+                <a href="" class="link-footer">Blog</a>
+            </li>
+            <li>
+                <a href="" class="link-footer">Contacto</a>
+            </li>
+            <li>
+                <a href="" class="link-footer">Para diseñadores</a>
+            </li>
+            <li>
+                <a href="" class="link-footer">Redes sociales</a>
+            </li>
+        </th>
+    </div>
+</footer>
 </body>
