--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@
         </div>
     </section>
     <br>
+<!-- Footer con info adicional de la pagina -->
 <footer>
     <div class="logo-footer">
         <p>© 2023, IMB</p>
