--- a/index.html
+++ b/index.html
@@ -57,22 +57,22 @@
             <img src="img/senior-3336451_1920.jpg" alt=carpeta3" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta4">
+            <img src="img/cat-8048688_1920.jpg" alt="carpeta4" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta5">
+            <img src="img/suit-673697_1920.jpg" alt="carpeta5" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta6">
+            <img src="img/man-1838330_1920.jpg" alt="carpeta6" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta7">
+            <img src="img/stones-167089_1920.jpg" alt="carpeta7" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta8"">
+            <img src="img/ball-8048205_1920.jpg" alt="carpeta8"">
         </div>
         <div class="grid-imagen">
-            <img src="img/WhatsApp Image 2023-06-19 at 19.42.05 (1).jpeg" alt="carpeta9">
+            <img src="img/army-60701_1920.jpg" alt="carpeta9">
         </div>
     </section>
     <br>
