--- a/index.html
+++ b/index.html
@@ -69,13 +69,12 @@
             <img src="img/stones-167089_1920.jpg" alt="carpeta7" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/ball-8048205_1920.jpg" alt="carpeta8"">
+            <img src="img/ball-8048205_1920.jpg" alt="carpeta8" height="100%" width="100%">
         </div>
         <div class="grid-imagen">
-            <img src="img/army-60701_1920.jpg" alt="carpeta9">
+            <img src="img/army-60701_1920.jpg" alt="carpeta9" height="100%" width="100%">
         </div>
     </section>
-    <br>
 <!-- Footer con info adicional de la pagina -->
 <footer>
     <div class="logo-footer">
