--- a/consejos.html
+++ b/consejos.html
@@ -46,9 +46,10 @@
     <br>
     <h2>Lorem, ipsum.</h2>
     <p class="parrafo-prueba">Lorem ipsum dolor sit amet consectetur adipisicing elit. Id molestias quod, quam, natus ullam eos alias ut fuga magnam esse aut mollitia sit. Dignissimos iure iusto id vero. Nihil, maxime.
-    Tenetur mollitia accusamus, totam maiores blanditiis consectetur at perspiciatis delectus est rerum? Similique voluptatibus cupiditate reprehenderit nihil, veritatis veniam, eos nostrum maxime alias, perspiciatis cum error exercitationem voluptatum quibusdam obcaecati.</p>
-    <br>
+    Tenetur mollitia accusamus, totam maiores blanditiis consectetur at perspiciatis delectus est rerum? Similique voluptatibus cupiditate reprehenderit nihil, veritatis veniam, eos nostrum maxime alias, perspiciatis cum error exercitationem voluptatum quibusdam obcaecati.
+    </p>
 </div>
+
 <footer>
     <div class="logo-footer">
         <p>© 2023, IMB</p>
