--- a/consejos.html
+++ b/consejos.html
@@ -29,7 +29,7 @@
             <li class="paginas">
                 <a href="contacto.html" class="linkNav">Contacto</a>
             </li>
-            <button class="sesion">Iniciar sesion/registrarse</button>
+            <a href="login.html"><button class="sesion">Iniciar sesion</button></a>
         </th>
     </nav>
 </header>
